deployment-replicas.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-replicas
  labels:
    app: my-k8s-application
    env: prod
    tier: frontend
    owner: SergeyKharkin
spec:
  replicas: 2
  selector: 
    matchLabels:
      project: cia
  template:
    metadata:
      labels:
        project: cia
    spec:
      containers:
        - name: cia-web
          image: sergkharkin/k8sphp:latest
          ports:
            - containerPort: 80
