deployment-simple.yml
apiVersion: v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app: my-k8s-application
    tier: frontend
    owner: SergeyKharkin
spec:
  selector: 
    matchLabels:
      project: kgb
  template:
    metadata:
      labels:
        project: kgb
    spec:
      containers:
        - name: kgb-web
          image: sergkharkin/k8sphp:latest
          ports:
            - containerPort: 80
