pod-myapp.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp1
  labels:
    env: prod
    app: main
    tier: frontend
    owner: SergeyKharkin
spec:
  containers:
    - name: container-web
      image: nginx:latest
      ports:
        - containerPort: 80


    - name: container-api
      image: tomcat:8.5.38
      ports:
        - containerPort: 8080
