pod-myweb1.yml
apiVersion: v1
kind: Pod
metadata:
  name: myweb
spec:
  containers:
    - name: container-nginx
      image: nginx:latest
      ports:
        - containerPort: 80
