services-lb1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello
  labels:
    app: nginx-hello
spec:
  replicas: 2
  selector:
    matchLabels:
      project: nginx-hello
  template:
    metadata:
      labels:
        project: nginx-hello
    spec:
      containers:
      - name: nginx-hello
        image: nginxdemos/hello
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  labels:
    env: prod
    owner: SergeyKharkin
  name: nginx-hello
spec:
  type: LoadBalancer
  ports:
  - name: http-listener
    port: 80
    targetPort: 80
  selector:
    project: nginx-hello
