svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-hello
  name: nginx-hello
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: nginx-hello
