ingress-hosts.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
spec:
  rules:
  - host: "inteliventi.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: main
            port:
              number: 80

  - host: "besureman.ru"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web1
            port:
              number: 80

  - host: "vpn1.inteliventi.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tomcat
            port:
              number: 8080
